# T-CorEx-1

./: README.md  pyproject.toml  requirements.txt  setup.py
tcorex/: base.py  corex.py
tcorex/tools/: tcorex.py  tcorex_changepoints.py  tcorex_cli.py  tcorex_plot.py
