[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gawseed-tcorex"
dynamic = ["version"]
description = "Correlation Explanation Methods"
readme = "README.md"
license = "GNU Affero General Public License v3.0"
authors = [
    { name = "Hrayr Harutyunyan", email = "harhro@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.14.2",
    "scipy>=1.1.0",
    "torch>=1.0",
    "nose>=1.3.7",
    "tqdm>=4.26",
    "linearcorex==0.52",
    "scikit-learn>=0.20.0",
    "regain==0.1.7",
    "pandas>=0.23.4",
    "nibabel>=2.3.1",
    "matplotlib>=2.2.2",
    "nilearn>=0.4.2",
    "scikit-learn",
]

[project.scripts]
tcorex = "tcorex.tools.tcorex_cli:main"
tcorex-changepoints = "tcorex.tools.tcorex_changepoints:main"
tcorex-plot = "tcorex.tools.tcorex_plot:main"

[project.urls]
Homepage = "https://github.com/gawseed/T-CorEx"

[tool.hatch.version]
path = "tcorex/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tcorex",
]
